# spl-bridge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  SECURITY_AUDIT.md  THIRD_PARTY_NOTICES.txt  docker-compose.example.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  ci.yml  legal.yml  lint.yml
docker/: requirements-runtime.txt
scripts/: check_no_secrets.sh  generate_third_party_notices.py  readme_smoketest.sh  refresh_docker_requirements.sh  release_audit.sh  run_python_matrix.sh  run_wizard_pty.py  smoketest_wizard.py  start_docker.sh
scripts/wizard_pty/: __init__.py  driver.py
scripts/wizard_pty/scenarios/: __init__.py  _base.py  bad_password_recovery.py  claude_cli.py  claude_desktop.py  dotfile_fallback.py  idempotent_rerun.py  password_ca_bundle.py  password_cursor.py  snippet_only.py  token_cursor.py
spl_bridge/: __init__.py  __main__.py  auth.py  cli.py  config.py  doctor.py  logging_config.py  rate_limit.py  server.py  splunk_client.py  tool_registry.py
spl_bridge/data/: PROVENANCE.md  builtin_tools.json  generating_commands.json  safe_spl.json
spl_bridge/setup_wizard/: __init__.py  credstore.py  mcp_clients.py  prereqs.py  splunk_probe.py  ui.py
tests/: test_auth.py  test_auth_concurrency.py  test_auth_retry.py  test_config.py  test_config_file_fallback.py  test_docker.py  test_doctor.py  test_dotfile_safety.py  test_error_sanitization.py  test_gap_fixes.py  test_integration.py  test_logging_config.py  test_main_module.py  test_mcp_e2e.py  test_no_redirect.py  test_p2_misc.py  test_password_drop.py  test_rate_limit.py  test_response_limit.py  test_safety.py  test_savedsearch_classifier.py  test_server_lifecycle.py  test_setup_wizard.py  test_setup_wizard_ui.py  test_spl_safety_corpus.py  test_splunk_client.py  test_splunk_probe.py  test_subprocess_env.py  test_tool_registry.py  test_validation.py  test_wizard_pty_scenarios.py
